--- a/assets/minecraft/lang/de_de.json
+++ b/assets/minecraft/lang/de_de.json
@@ -5,26 +5,34 @@
     # tellraw
     "§dAmethyst-fast-travel §5has been reloaded.": "§dAmethyst-Schnellreisen §5wurde neu geladen.",
     "§dAmethyst-fast-travel §5has been removed.": "§dAmethyst-Schnellreisen §5wurde entfernt.",
-    "%1$s §5has built a new §dteleporter§5!": "%1$s §5hat einen neuen §dTeleporter §5gebaut!",
-    "§5You have selected the first §dteleporter§5!": "§5Du hast den ersten §dTeleporter §5ausgewählt!",
-    "%1$s §5has connected two §dteleporters§5!": "%1$s §5hat zwei §dTeleporter §5verbunden!",
-    "§5A §dteleporter §5has lost its destination!": "§5Ein §dTeleporter §5hat sein Ziel verloren!",
-    "%1$s §5has destroyed a §dteleporter§5!": "%1$s §5hat einen §dTeleporter §5zerstört!",
+    "%1$s §5has built a new §dfast travel point§5!": "%1$s §5hat einen neuen §dSchnellreisepunkt §5gebaut!",
+    "§5You have selected the first §dfast travel point§5!": "§5Du hast den ersten §dSchnellreisepunkt §5ausgewählt!",
+    "%1$s §5has connected two §dfast travel points§5!": "%1$s §5hat zwei §dSchnellreisepunkte §5verbunden!",
+    "§5A §dfast travel point §5has lost its destination!": "§5Ein §dSchnellreisepunkt §5hat sein Ziel verloren!",
+    "%1$s §5has destroyed a §dfast travel point§5!": "%1$s §5hat einen §dSchnellreisepunkt §5zerstört!",
+    
+    # bossbar
+    "Channelling": "Kanalisieren",
+
+    # title
+    "New location:": "Neuen Ort:",
 
     # book
     "Fast travel": "Schnellreisen",
     "\u2551   Notes of a  \u2551": "\u2551 Notizen eines \u2551",
     "\u2551    traveler   \u2551": "\u2551   Reisenden   \u2551",
     "Table of content:": "Inhalt:",
-    " \u2666 Setup\n \u2666 Classes\n \u2666 Activation\n \u2666 Connection\n \u2666 Teleportation\n \u2666 Removal\n": " \u2666 Aufbau\n \u2666 Klassen\n \u2666 Aktivierung\n \u2666 Verbinden\n \u2666 Teleportieren\n \u2666 Abbauen",
+    " \u2666 Setup\n \u2666 Classes\n \u2666 Activation\n \u2666 Connection\n \u2666 Travelling\n \u2666 Removal\n": " \u2666 Aufbau\n \u2666 Klassen\n \u2666 Aktivierung\n \u2666 Verbinden\n \u2666 Reisen\n \u2666 Abbauen",
     "Setup:": "Aufbau:",
-    "To build a teleporter, a platform must be built.": "Um einen Teleporter zu bauen, muss eine Platform gebaut werden.",
+    "To build a fast travel point, a platform must be built.": "Um einen Schnellreisepunkt zu bauen, muss eine Platform gebaut werden.",
+    "The following sketch shows the structure of the platform.": "Nachfolgende Skitze zeigt den Aufbau der Platform.",
     "Top view of the platform:": "Draufsicht der Platform:",
     "Legend:": "Legende:",
     "Amethyst block": "Amethystblock",
     "Catalyzer": "Katalysator",
     "Classes:": "Klassen:",
-    "The \"Catalyst\" block determines the time the teleporter needs to channel. In addition, not all teleporters can be kept permanently active in all diminsions. For this the right \"catalyst\" must be chosen.": "Der \"Katalysator\" Block bestimmt die Zeit die der Teleporter benötigt um zu kanalisieren. Zudem können nicht alle Teleporter in allen Diminsionen dauerhaft aktiv gehalten werden. Hierzu muss der richtige \"Katalysator\" gewählt werden.",
+    "The \"Catalyst\" block determines the time the fast travel point needs to channel.": "Der \"Katalysator\" Block bestimmt die Zeit die der Schnellreisepunkt benötigt um zu kanalisieren.",
+    "In addition, not all fast travel points can be kept permanently active in all diminsions. For this the right \"catalyst\" must be chosen.": "Zudem können nicht alle Schnellreisepunkte in allen Diminsionen dauerhaft aktiv gehalten werden. Hierzu muss der richtige \"Katalysator\" gewählt werden.",
     "Block (time) worlds:": "Block (Zeit) Welten:",
     "Copper (10s)": "Kupfer (10s)",
     "Iron (6s)": "Eisen (6s)",
@@ -36,17 +44,18 @@
     "Nether": "Nether",
     "End": "End",
     "Activation:": "Aktivierung:",
-    "To activate the platform of a teleporter, you must stand in the middle of the platform.": "Um die Platform eines Teleporters zu aktivieren, muss sich in der Mitte der Platform gestellt werden.",
+    "To activate the platform of a fast travel point, you must stand in the middle of the platform.": "Um die Platform eines Schnellreisepunktes zu aktivieren, muss sich in der Mitte der Platform gestellt werden.",
     "Connection:": "Verbinden:",
-    "To connect two teleporters, the first one must be marked first. To do this, stand in the center of an activated unconnected teleporter and hold an amethyst shard in your hand.": "Um zwei Teleporter zu verbinden, muss zunächst der Erste makiert werden. Hierzu muss sich mittig auf einen aktivierten unverbundenen Teleporter gestellt werden und eine Amethystscherbe in der Hand gehalten werden.",
-    "Teleportation:": "Teleportieren:",
-    "To teleport, stand in the center of an activated connected teleporter and hold an amethyst shard in your hand. Now the teleport starts to channel.": "Zum Teleportieren muss sich mittig auf einen aktivierten verbundenen Teleporter gestellt werden und eine Amethystscherbe in der Hand gehalten werden. Nun fänget der Teleport an zu kanalisieren.",
-    "NPCs can be taken along by standing on the teleporter. However, these also consume an amethyst shard.": "Es können NPCs mitgenommen werden, indem diese mit auf dem Teleporter stehen. Diese verbrauchen jedoch ebenfalls eine Amethystscherbe.",
-    "After teleportation, the platform must be re-entered or the amethyst shard must be taken in hand again.": "Nach einem Teleport muss die Platform erneut betreten werden oder die Amethystscherbe erneut in die Hand genommen werden.",
+    "To connect two fast travel points, the first one must be marked first. To do this, stand in the center of an activated unconnected fast travel point and hold an amethyst shard in your hand.": "Um zwei Schnellreisepunkte zu verbinden, muss zunächst der Erste makiert werden. Hierzu muss sich mittig auf einen aktivierten unverbundenen Schnellreisepunkt gestellt werden und eine Amethystscherbe in der Hand gehalten werden.",
+    "Now you can go to the second activated unconnected platform and do the same as you did with the first.": "Nun können Sie zur zweiten aktivierten, nicht angeschlossenen Plattform gehen und das Gleiche tun wie bei der ersten.",
+    "Travelling:": "Reisen:",
+    "To travel, stand in the center of an activated connected fast travel point and hold an amethyst shard in your hand. Now the fast travel starts to channel.": "Zum Reisen muss sich mittig auf einen aktivierten verbundenen Schnellreisepunkt gestellt werden und eine Amethystscherbe in der Hand gehalten werden. Nun fänget die Schnellreise an zu kanalisieren.",
+    "NPCs can be taken along by standing on the fast travel point. However, these also consume an amethyst shard.": "Es können NPCs mitgenommen werden, indem diese mit auf dem Schnellreisepunkt stehen. Diese verbrauchen jedoch ebenfalls eine Amethystscherbe.",
+    "After travelling, the platform must be re-entered or the amethyst shard must be taken in hand again.": "Nach einem Teleport muss die Platform erneut betreten werden oder die Amethystscherbe erneut in die Hand genommen werden.",
     "Removal:": "Abbauen:",
-    "If a block of the platform of an activated teleporter is removed, the teleporter is destroyed.": "Wird ein Block der Platform eines aktivierten Teleporters entfernt, so wird der Teleporter zerstört.",
-    "A possibly connected teleporter will now also no longer work.": "Ein möglicherweise verbundener Teleporter funktioniert nun auch nicht mehr.",
+    "If a block of the platform of an activated fast travel point is removed, the fast travel point is destroyed.": "Wird ein Block der Platform eines aktivierten Schnellreisepunktes entfernt, so wird der Schnellreisepunkt zerstört.",
+    "A possibly connected fast travel point will now also no longer work.": "Ein möglicherweise verbundener Schnellreisepunkt funktioniert nun auch nicht mehr.",
     "Amethyst fast travel": "Amethyst-Schnellreisen",
-    "AmethystTraveling": "AmethystReisen",
+    "AmethystTravelling": "AmethystReisen",
     "Travel with amethysts between distant places.": "Reise mit Amethysten zwischen weit entfernten Orten."
 }
