--- a/assets/minecraft/lang/de_de.json
+++ b/assets/minecraft/lang/de_de.json
@@ -8,6 +8,7 @@
     "%1$s §5has built a new §dfast travel point§5!": "%1$s §5hat einen neuen §dSchnellreisepunkt §5gebaut!",
     "§5You have selected the first §dfast travel point§5!": "§5Du hast den ersten §dSchnellreisepunkt §5ausgewählt!",
     "%1$s §5has connected two §dfast travel points§5!": "%1$s §5hat zwei §dSchnellreisepunkte §5verbunden!",
+    "§5This tier of a §dfast travel point§5 cannot be activated here!": "§5Diese Stufe eines §dSchnellreisepunktes §5kann hier nicht aktiviert werden!",
     "§5A §dfast travel point §5has lost its destination!": "§5Ein §dSchnellreisepunkt §5hat sein Ziel verloren!",
     "%1$s §5has destroyed a §dfast travel point§5!": "%1$s §5hat einen §dSchnellreisepunkt §5zerstört!",
     
