Add translations for advancements; removed for book

--- a/assets/minecraft/lang/de_de.json
+++ b/assets/minecraft/lang/de_de.json
@@ -18,47 +18,37 @@
     # title
     "New location:": "Neuen Ort:",
 
-    # book
-    "Fast travel": "Schnellreisen",
-    "\u2551   Notes of a  \u2551": "\u2551 Notizen eines \u2551",
-    "\u2551    traveler   \u2551": "\u2551   Reisenden   \u2551",
-    "Table of content:": "Inhalt:",
-    " \u2666 Setup\n \u2666 Classes\n \u2666 Activation\n \u2666 Connection\n \u2666 Travelling\n \u2666 Removal\n": " \u2666 Aufbau\n \u2666 Klassen\n \u2666 Aktivierung\n \u2666 Verbinden\n \u2666 Reisen\n \u2666 Abbauen",
-    "Setup:": "Aufbau:",
-    "To build a fast travel point, a platform must be built.": "Um einen Schnellreisepunkt zu bauen, muss eine Platform gebaut werden.",
-    "The following sketch shows the structure of the platform.": "Nachfolgende Skitze zeigt den Aufbau der Platform.",
-    "Top view of the platform:": "Draufsicht der Platform:",
-    "Legend:": "Legende:",
-    "Amethyst block": "Amethystblock",
-    "Catalyzer": "Katalysator",
-    "Classes:": "Klassen:",
-    "The \"Catalyst\" block determines the time the fast travel point needs to channel.": "Der \"Katalysator\" Block bestimmt die Zeit die der Schnellreisepunkt benötigt um zu kanalisieren.",
-    "In addition, not all fast travel points can be kept permanently active in all diminsions. For this the right \"catalyst\" must be chosen.": "Zudem können nicht alle Schnellreisepunkte in allen Diminsionen dauerhaft aktiv gehalten werden. Hierzu muss der richtige \"Katalysator\" gewählt werden.",
-    "Block (time) worlds:": "Block (Zeit) Welten:",
-    "Copper (10s)": "Kupfer (10s)",
-    "Iron (6s)": "Eisen (6s)",
-    "Gold (3s)": "Gold (3s)",
-    "Emerald (2s)": "Smaragd (2s)",
-    "Diamond (1.5s)": "Diamant (1.5s)",
-    "Netherite (1s)": "Netherite (1s)",
-    "Overworld": "Oberwelt",
-    "Nether": "Nether",
-    "End": "End",
-    "Activation:": "Aktivierung:",
-    "To activate the platform of a fast travel point, you must stand in the middle of the platform.": "Um die Platform eines Schnellreisepunktes zu aktivieren, muss sich in der Mitte der Platform gestellt werden.",
-    "Connection:": "Verbinden:",
-    "To connect two fast travel points, the first one must be marked first. To do this, stand in the center of an activated unconnected fast travel point and hold an amethyst shard in your hand.": "Um zwei Schnellreisepunkte zu verbinden, muss zunächst der Erste makiert werden. Hierzu muss sich mittig auf einen aktivierten unverbundenen Schnellreisepunkt gestellt werden und eine Amethystscherbe in der Hand gehalten werden.",
-    "Now you can go to the second activated unconnected platform and do the same as you did with the first.": "Nun können Sie zur zweiten aktivierten, nicht angeschlossenen Plattform gehen und das Gleiche tun wie bei der ersten.",
-    "Travelling:": "Reisen:",
-    "To travel, stand in the center of an activated connected fast travel point and hold an amethyst shard in your hand. Now the fast travel starts to channel.": "Zum Reisen muss sich mittig auf einen aktivierten verbundenen Schnellreisepunkt gestellt werden und eine Amethystscherbe in der Hand gehalten werden. Nun fänget die Schnellreise an zu kanalisieren.",
-    "NPCs can be taken along by standing on the fast travel point. However, these also consume an amethyst shard.": "Es können NPCs mitgenommen werden, indem diese mit auf dem Schnellreisepunkt stehen. Diese verbrauchen jedoch ebenfalls eine Amethystscherbe.",
-    "After travelling, the platform must be re-entered or the amethyst shard must be taken in hand again.": "Nach einem Teleport muss die Platform erneut betreten werden oder die Amethystscherbe erneut in die Hand genommen werden.",
-    "Renaming:": "Umbenennung:",
-    "When a fast travel point is renamed with a name tag, its name is shown when you travels to it.": "Wenn ein Schnellreisepunkt mit einem Namensschild umbenannt wird, wird sein Name angezeigt, wenn man zu ihm reist.",
-    "Removal:": "Abbauen:",
-    "If a block of the platform of an activated fast travel point is removed, the fast travel point is destroyed.": "Wird ein Block der Platform eines aktivierten Schnellreisepunktes entfernt, so wird der Schnellreisepunkt zerstört.",
-    "A possibly connected fast travel point will now also no longer work.": "Ein möglicherweise verbundener Schnellreisepunkt funktioniert nun auch nicht mehr.",
-    "Amethyst fast travel": "Amethyst-Schnellreisen",
-    "AmethystTravelling": "AmethystReisen",
-    "Travel with amethysts between distant places.": "Reise mit Amethysten zwischen weit entfernten Orten."
+    # advancements
+    "What's going wrong here?": "Was läuft hier schief?",
+    "The chosen catalyst block seems to be too weak here": "Der gewählte Katalysatorblock scheint hier zu schwach zu sein",
+    "Discover tier 1": "Entdecke Stufe 1",
+    "Besides copper use an iron, gold or emerald block as a catalyst": "Benutze neben Kupfer einen Eisen-, Gold- oder Smaragdblock als Katalysator",
+    "Discover tier 3": "Entdecke Stufe 3",
+    "Use a block of netherite as a catalyst": "Verwende einen Netheritblock als Katalysator",
+    "Discover tier 2": "Entdecke Stufe 2",
+    "Use a diamond block as a catalyst": "Benutze einen Diamantblock als Katalysator",
+    "Build a fast travel point": "Bauen einen Schnellreisepunkt",
+    "Build a 3x3 platform by placing 8 amethyst blocks in a square around a copper block as a catalyst. Then stand in the middle of the unactivated platform": "Baue eine 3x3-Plattform, indem du 8 Amethystblöcke in einem Quadrat um einen Kupferblock als Katalysator platzierst. Stelle dich dann in die Mitte dieser nicht aktivierten Plattform",
+    "Appeared with a blast": "Erschien mit einer Knall",
+    "Travel with a creeper": "Reise mit einem Creeper",
+    "Was that risky?": "War das riskant?",
+    "Travel with a hostile creature": "Reise mit einer feindlichen Kreatur",
+    "Did you see the cost?": "Hast du die Kosten gesehen?",
+    "Travel with a passive creature": "Reise mit einer passiven Kreatur",
+    "Connect two fast travel points": "Verbinde zwei Schnellreisepunkte",
+    "Stand in the center of an unconnected platform and hold an amethyst shard. Then repeat that for the destination": "Stell dich in die Mitte einer unverbundenen Plattform und halte einen Amethystsplitter in der Hand. Wiederhole dies dann auch für das Ziel",
+    "Remove a fast travel point": "Entferne einen Schnellreisepunkt",
+    "Break one block of the platform of a fast travel point": "Baue einen Block der Plattform eines Schnellreisepunktes ab",
+    "Choosed a matching name": "Einen passenden Namen gewählt",
+    "Travel to a renamed fast travel point. To rename a fast travel point, use a name tag on the center of the platform": "Reise zu einem umbenannten Schnellreisepunkt. Um einen Schnellreisepunkt umzubenennen, verwende ein Namensschild auf der Mitte der Plattform",
+    "Amethysttravelling": "Amethyst-Schnellreisen",
+    "You feel that these gems have something magical ...": "Du spürst, dass diese Edelsteine etwas Magisches haben ...",
+    "The wrong destination?": "Das falsche Ziel?",
+    "Leave the platform before the fast travel point is fully channelized": "Verlasse die Plattform, bevor der Schnellreisepunkt vollständig kanalisiert ist",
+    "Is my destination destroyed?": "Ist mein Zielort zerstört?",
+    "Travel with a fast travel point to a destroyed platform": "Reise mit einem Schnellreisepunkt zu einer zerstörten Plattform",
+    "Arcane traveler": "Arkaner Reisender",
+    "Use a fast travel point in the nether, the overworld, and the end": "Benutze einen Schnellreisepunkt im Nether, in der Oberwelt und dem Ende",
+    "That was pretty fast": "Das war ziemlich schnell",
+    "Stand on a connected platform and hold an amethyst shard in your hand": "Stehe auf einer verbundenen Plattform und halte einen Amethystsplitter in der Hand"
 }
