Corrected some typos

--- a/assets/minecraft/lang/de_de.json
+++ b/assets/minecraft/lang/de_de.json
@@ -16,7 +16,7 @@
     "Channelling": "Kanalisieren",
 
     # title
-    "New location:": "Neuen Ort:",
+    "New location:": "Neuer Ort:",
 
     # advancements
     "What's going wrong here?": "Was läuft hier schief?",
@@ -27,17 +27,17 @@
     "Use a block of netherite as a catalyst": "Verwende einen Netheritblock als Katalysator",
     "Discover tier 2": "Entdecke Stufe 2",
     "Use a diamond block as a catalyst": "Benutze einen Diamantblock als Katalysator",
-    "Build a fast travel point": "Bauen einen Schnellreisepunkt",
+    "Build a fast travel point": "Baue einen Schnellreisepunkt",
     "Build a 3x3 platform by placing 8 amethyst blocks in a square around a copper block as a catalyst. Then stand in the middle of the unactivated platform": "Baue eine 3x3-Plattform, indem du 8 Amethystblöcke in einem Quadrat um einen Kupferblock als Katalysator platzierst. Stelle dich dann in die Mitte dieser nicht aktivierten Plattform",
-    "Appeared with a blast": "Erschien mit einer Knall",
+    "Appeared with a blast": "Erschien mit einem Knall",
     "Travel with a creeper": "Reise mit einem Creeper",
     "Was that risky?": "War das riskant?",
     "Travel with a hostile creature": "Reise mit einer feindlichen Kreatur",
     "Did you see the cost?": "Hast du die Kosten gesehen?",
     "Travel with a passive creature": "Reise mit einer passiven Kreatur",
-    "Connect two fast travel points": "Verbinde zwei Schnellreisepunkte",
+    "Connect two fast travel points": "Verbinde zwei Plattformen",
     "Stand in the center of an unconnected platform and hold an amethyst shard. Then repeat that for the destination": "Stell dich in die Mitte einer unverbundenen Plattform und halte einen Amethystsplitter in der Hand. Wiederhole dies dann auch für das Ziel",
-    "Remove a fast travel point": "Entferne einen Schnellreisepunkt",
+    "Remove a fast travel point": "Entferne eine Plattform",
     "Break one block of the platform of a fast travel point": "Baue einen Block der Plattform eines Schnellreisepunktes ab",
     "Choosed a matching name": "Einen passenden Namen gewählt",
     "Travel to a renamed fast travel point. To rename a fast travel point, use a name tag on the center of the platform": "Reise zu einem umbenannten Schnellreisepunkt. Um einen Schnellreisepunkt umzubenennen, verwende ein Namensschild auf der Mitte der Plattform",
