--- a/assets/minecraft/lang/ru_ru.json
+++ b/assets/minecraft/lang/ru_ru.json
@@ -43,7 +43,7 @@
     "You feel that these gems have something magical ...": "Чувствуется, что в этих драгоценных камнях есть что-то волшебное...",
     "The wrong destination?": "Что-то пошло не по плану",
     "Leave the platform before the fast travel point is fully channelized": "Покиньте платформу до того, как шкала заполнится",
-    "Is my destination destroyed?": "",
+    "Is my destination destroyed?": "Мой телепорт разрушен?",
     "Travel with a fast travel point to a destroyed platform": "Попытался переместиться к разрушенной платформе",
     "Arcane traveler": "Арканный путешественник",
     "Use a fast travel point in the nether, the overworld, and the end": "Используйте точку быстрого перемещения в аду, верхнем мире и энде",
