"direct translation" 38 and 44 lines

--- a/assets/minecraft/lang/ru_ru.json
+++ b/assets/minecraft/lang/ru_ru.json
@@ -35,13 +35,13 @@
     "Travel with a passive creature": "Телепортируйтесь с мобом",
     "Connect two fast travel points": "Подключение телепортов",
     "Stand in the center of an unconnected platform and hold an amethyst shard. Then repeat that for the destination": "Встаньте в центр несвязанного телепорта. Затем повторите это для конечного телепорта.",
-    "Remove a fast travel point": "Осуждаю",
-    "Break one block of the platform of a fast travel point": "Сломал телепорт",
+    "Remove a fast travel point": "Отключение телепорта",
+    "Break one block of the platform of a fast travel point": "Сломайте телепорт",
     "Choosed a matching name": "Подходящее название",
     "Travel to a renamed fast travel point. To rename a fast travel point, use a name tag on the center of the platform": "Телепортируйтесь через переименованную точку быстрого перемещения. Чтобы переименовать телепорт, используйте бирку с именем на центр платформы.",
     "Amethysttravelling": "Аметистовые Телепорты",
     "You feel that these gems have something magical ...": "Чувствуется, что в этих драгоценных камнях есть что-то волшебное...",
-    "The wrong destination?": "Что-то пошло не по плану",
+    "The wrong destination?": "Неверное место прибытия?",
     "Leave the platform before the fast travel point is fully channelized": "Покиньте платформу до того, как шкала заполнится",
     "Is my destination destroyed?": "Мой телепорт разрушен?",
     "Travel with a fast travel point to a destroyed platform": "Попытался переместиться к разрушенной платформе",
