--- a/assets/minecraft/lang/ru_ru.json
+++ b/assets/minecraft/lang/ru_ru.json
@@ -25,7 +25,7 @@
     "Use a block of netherite as a catalyst": "Используйте блок незерита в качестве катализатора",
     "Discover tier 2": "Второй тир",
     "Use a diamond block as a catalyst": "Используйте алмазный блок в качестве катализатора",
-    "Build a fast travel point": "Постройка аметистового телепорта",
+    "Build a fast travel point": "Постройка телепорта",
     "Build a 3x3 platform by placing 8 amethyst blocks in a square around a copper block as a catalyst. Then stand in the middle of the unactivated platform": "Постройте платформу 3x3, разместив 8 блоков аметиста вокруг блока меди в качестве катализатора. Затем встаньте на центр неактивированной платформы.",
     "Appeared with a blast": "Бомбическое появление",
     "Travel with a creeper": "Телепортируйтесь с крипером",
